--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.2",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.14.2",
