--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.12.7",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
